syntax = "proto3";

package golden_gate;

import "google/protobuf/empty.proto";
import "networks/networks.proto";
import "transfers/transfers.proto";

option go_package = "github.com/BoostyLabs/casper-eth-bridge/boosty-communication/go-gen/gateway-bridge;pb_gateway_bridge";

service GatewayBridge {
  // Return a list of all networks this bridge is connected to.
  rpc ConnectedNetworks(google.protobuf.Empty) returns (ConnectedNetworksResponse);

  // Return a list of all tokens supported by particular network.
  rpc SupportedTokens(SupportedTokensRequest) returns (TokensResponse);

  // Estimate a potential transfer.
  rpc EstimateTransfer(EstimateTransferRequest) returns (EstimateTransferResponse);

  // Return status of transfer.
  rpc Transfer(TransferRequest) returns (TransferResponse);

  // Cancel a pending transfer.
  rpc CancelTransfer(CancelTransferRequest) returns (CancelTransferResponse);

  // Return paginated transfer history for user.
  rpc TransferHistory(TransferHistoryRequest) returns (TransferHistoryResponse);

  // Return signature for user to send bridgeIn transaction. 
  rpc BridgeInSignature(BridgeInSignatureRequest) returns (BridgeInSignatureResponse);
}
